Avoid disabled overflow on input. Avoid removing items when component is disabled.

--- a/src/app/iq-select2/iq-select2.component.css
+++ b/src/app/iq-select2/iq-select2.component.css
@@ -85,6 +85,10 @@
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6);
 }
 
+.select2-container ul {
+    position: relative;
+}
+
 .simple-selection.search-focused .selectedItemText {
     display: none;
 }
